--- a/css/master.styl
+++ b/css/master.styl
@@ -67,3 +67,76 @@ html, body
 #edit
   color: #fff
   float: right
+
+.closed
+  position: relative
+  width: 100%
+
+.closed::before
+  position: absolute
+  left: 50%
+  transform: translateX(-50%)
+  font-size: 50px
+  color: #fff
+  margin-top: 20px
+  top: -30px
+  cursor: pointer
+
+#stock_news
+  position: fixed
+  left: 50%
+  top: 5%
+  transform: translateX(-50%)
+  width: 90%
+  height: 90vh
+  max-width: 700px
+  margin: auto
+  background: #fff
+  border-radius: 10px
+  box-shadow: 0px 0px 30px -5px #000
+  z-index: 2
+  display: none
+  text-overflow: clip
+
+#exit
+  float: right
+  margin: 10px
+  font-size: 25px
+  color: #ff4242
+  cursor: pointer
+
+#news_feed
+  width: 90%
+  margin: auto
+  height: 80%
+  overflow-y: auto
+  overflow-x: hidden
+
+.post_title
+  font-size: 18px
+  color: #212121
+  font-family: 'Roboto Slab', serif
+  width: 40%
+  text-decoration: none
+
+.post_meta
+  font-family: 'Roboto', sans-serif
+  color: #ccc
+  font-size: 12px
+  margin-left: 10px
+  margin-top: 5px
+
+.post_preview
+  margin-top: 10px
+  font-family: 'Nunito'
+  font-size: 15px
+  color: #565656;
+
+.post
+  margin-bottom: 30px
+  display: flex
+  border-top: 4px solid #eee
+  padding-top: 15px
+.post_cont
+  width: 50%
+  margin-left: 3%
