--- a/css/master.styl
+++ b/css/master.styl
@@ -30,6 +30,8 @@ html, body
   font-size: 27px
   line-height: 80px
   padding-left: 20px
+  display: flex
+  margin-bottom: 15px
 
 .price
   float: right
@@ -42,7 +44,7 @@ html, body
 .col
   width: 50%
   height: 100%
-  margin-top: 50px;
+  margin-top: 10px;
 
 .col_head
   color: #fff
@@ -137,6 +139,20 @@ html, body
   display: flex
   border-top: 4px solid #eee
   padding-top: 15px
+
 .post_cont
   width: 50%
   margin-left: 3%
+
+.head_name
+  width: 100%
+  text-overflow: ellipsis
+  white-space: nowrap
+  overflow: hidden
+
+.your_info
+  font-size: 20px
+  color: #fff
+  width: 80%
+  margin: auto
+  font-family: 'Roboto Slab'
